k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    name: mongodb
spec:
  ports:
    - port: 27017
  selector:
    name: mongodb

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  template:
    metadata:
      name: mongodb
      labels:
        name: mongodb
    spec:
      containers:
        - resources:
            requests:
              cpu: 0.1
          image: mongo:3.2
          name: mongo
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          gcePersistentDisk:
            pdName: PLACEHOLDER_VOLUME_PD_NAME
            fsType: ext4
